# Sarathi

./: .env.example  .gitignore  Architecture.md  Database_Design.md  Domain_Model.md  Integration_Architecture.md  Makefile  OCR_Design.md  PRD.md  Platform_Architecture.md  README.md  Security_Review.md  Service_Catalog.md  Tax_Engine.md  Workflow_Design.md  alembic.ini  docker-compose.yml  openapi.yaml  package.json  tmp_identity_probe.db
apps/api_gateway/: README.md  pyproject.toml
apps/api_gateway/api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api_gateway/app/: main.py
apps/api_gateway/app/core/: config.py
services/identity_service/: README.md  alembic.ini  pyproject.toml
services/identity_service/alembic/: env.py
services/identity_service/alembic/versions/: 0001_initial_identity_schema.py
services/identity_service/app/: main.py
services/identity_service/app/api/: dependencies.py  routes.py
services/identity_service/app/application/: security.py  services.py
services/identity_service/app/core/: config.py
services/identity_service/app/domain/: events.py  models.py  ports.py  schemas.py
services/identity_service/app/infrastructure/: db.py  repositories.py
services/identity_service/identity_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/identity_service/tests/: conftest.py  test_auth.py  test_models.py  test_rbac.py
services/integration_service/: README.md  alembic.ini  pyproject.toml
services/integration_service/alembic/: env.py
services/integration_service/alembic/versions/: 0001_initial_integration_schema.py
services/integration_service/app/: main.py
services/integration_service/app/api/: dependencies.py  routes.py
services/integration_service/app/core/: config.py
services/integration_service/tests/: conftest.py  test_integration_service.py
(+161 files in other folders)
